[package]
name = "ai_gateaway"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3"
tokio-postgres = "0.7"
native-tls = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"